--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 2,
-  "name": "XPath Helper",
+  "name": "Chrome XPath Helper",
   "version": "1.0.13",
   "description": "Extract, edit, and evaluate XPath queries with ease.",
+  "permissions":["clipboardRead",  "clipboardWrite"],
   "background": {
     "page": "background.html"
   },
